# FP3D

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  main.cpp
.github/workflows/: .build.yml.swp  build.yml
FP3D/: CMakeLists.txt
FP3D/include/: Camera.h  Light.h  Material.h  Matrix4.h  Mesh.h  OGLRenderer.h  Point3.h  Scene.h  Vector3.h
FP3D/shaders/: fragmentShader.glsl  vertexShader.glsl
FP3D/src/: Camera.cpp  Light.cpp  Matrix4.cpp  Mesh.cpp  OGLRenderer.cpp  Object3D.cpp  Object3D.h  ShaderProgram.cpp  ShaderProgram.h  Triangle.h  Vector3.cpp  Vertex.h
demos/animation-demo/: CMakeLists.txt  main.cpp
demos/moving-camera-demo/: CMakeLists.txt  main.cpp
demos/wx-demo/: App.cpp  App.h  CMakeLists.txt  ControlPanel.cpp  ControlPanel.h  MainWindow.cpp  MainWindow.h  OGLViewer.cpp  OGLViewer.h  RayTraceViewer.cpp  RayTraceViewer.h  main.cpp
include/: Camera.h  Light.h  Material.h  Matrix4.h  Mesh.h  OGLRenderer.h  Ray.h  RayCastingRenderer.h  RayHit.h  RayTracingRenderer.h  Scene.h  Vector3.h
include/glad/src/: glad.c
lib/glad/include/glad/: glad.h
src/: Camera.cpp  Matrix4.cpp  Mesh.cpp  OGLRenderer.cpp  Object3D.cpp  Object3D.h  Ray.cpp  RayCastingRenderer.cpp  RayTracingRenderer.cpp  Renderer.h  Scene.cpp  ShaderProgram.cpp  ShaderProgram.h  Triangle.cpp  Triangle.h  Vector3.cpp  Vertex.cpp  Vertex.h
src/shaders/: fragmentShader.glsl  vertexShader.glsl
